[gd_scene load_steps=6 format=3 uid="uid://ducem6nk4n158"]

[ext_resource type="Script" uid="uid://bungay0ywhap" path="res://checkpoint/checkpoint.gd" id="1_q42b1"]
[ext_resource type="Texture2D" uid="uid://gjgfjnuuki6x" path="res://tilemap_packed.png" id="1_slojq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q42b1"]
atlas = ExtResource("1_slojq")
region = Rect2(104, 32, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_10gex"]
atlas = ExtResource("1_slojq")
region = Rect2(112, 32, 8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_10gex"]
size = Vector2(8, 8)

[node name="Checkpoint" type="Node2D"]
texture_filter = 1
script = ExtResource("1_q42b1")

[node name="SpriteFresh" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_q42b1")

[node name="SpriteUsed" type="Sprite2D" parent="."]
visible = false
texture = SubResource("AtlasTexture_10gex")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_10gex")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
